fixing spacing for login notification. fix global loading spacing

--- a/src/app/login/page.module.css
+++ b/src/app/login/page.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  margin-top: 5rem;
 }
 
 .cardContainer {
@@ -23,7 +24,7 @@
 @media (max-width: 500px) {
   .container {
     width: 100%;
-    padding-top: 250px;
+    padding-top: 100px;
   }
   .cardContainer {
     width: 80%;
